examples/errors/invretty.spl

foo(aap) {
    if (aap) {
        return a;
    }
    return 3;
}

main() {return;}